@@ -63,6 +63,8 @@ Version 2.0.0 FINAL - The "Tiku - the one and only" version.
 		in wxGTK-2.5.3.
 		* Applied patch from geeko to complete html functionality of
 		cas.
+		* Fixed a big bug in proxy code. Sockets were not continuing 
+		conversation after connecting to sources.
 
 	Ken:
 		* Fixed Mac bug: window was a little larger each restart
